# parcllabs-rust

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: batch_metrics.rs  for_sale_market_analysis.rs  institutional_ownership.rs  investor_activity.rs  market_metrics.rs  new_construction.rs  portfolio_metrics.rs  property_search.rs  search_markets.rs
src/: error.rs  lib.rs  models.rs
src/endpoints/: common.rs  for_sale_metrics.rs  investor_metrics.rs  market_metrics.rs  mod.rs  new_construction_metrics.rs  portfolio_metrics.rs  price_feed.rs  property.rs  rental_metrics.rs  search.rs
