[package]
name = "parcllabs"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Parcl Labs API"
license = "MIT"
repository = "https://github.com/ExoMonk/parcllabs-rust"
keywords = ["parcl", "real-estate", "housing", "api", "sdk"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"

[[example]]
name = "search_markets"
path = "examples/search_markets.rs"

[[example]]
name = "market_metrics"
path = "examples/market_metrics.rs"
